<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Authentication -->
    <string name="login_title">Login</string>
    <string name="signup_title">Sign Up</string>
    <string name="no_account">Don\'t have an account</string>
    <string name="yes_account">Already have an account</string>
    <string name="option_signup"><u><font color="#0000FF">sign up?</font></u></string>
    <string name="option_login"><u><font color="#0000FF">log in?</font></u></string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="forgot_password"><u><font color="#0000FF">Forgot password?</font></u></string>
    <string name="err0">Please enter a valid email address</string>
    <string name="err1">Please enter a valid password</string>
    <string name="err2">Please enter a longer Password</string>
    <string name="hint_username">username</string>
    <string name="err3">Passwords do not match</string>


    <string name="btn_1_login">Login as Student</string>
    <string name="btn_2_login">Login as Club</string>

    <string name="btn_1_signup">Sign up as Student</string>
    <string name="btn_2_signup">Sign up as Club</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Navigation -->
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="previous_month">Previous Month</string>
    <string name="next_month">Next Month</string>
    <string name="add_event">Add Event</string>

    <!-- Tickets Screen -->
    <string name="tickets_title">Coding Club SUO Tickets</string>
    <string name="ticket_header_image_description">Header image for the tickets screen</string>
    <string name="event_sections_description">Tabs for event sections</string>
    <string name="tickets_label">Tickets</string>
    <string name="tickets_tab">Tickets</string>
    <string name="about_tab">About</string>
    <string name="faq_tab">FAQ</string>
    <string name="ticket_booked">Booked</string>
    <string name="add_to_cart">Add to Cart</string>

    <!-- Ticket Details Screen -->
    <string name="details_label">Details</string>
    <string name="details_body_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="past_event_ratings">Past Event Ratings: 4.0</string>
    <string name="ticket_types_title">Ticket Types</string>
    <string name="choose_payment_type">Choose payment type</string>
    <string name="total_including_tax">Total (including tax):</string>
    <string name="total_price">$1.99</string>
    <string name="get_tickets_button">Get Tickets</string>
</resources>